# DearImguiGLFWGLEWCmakeTemplate

./: CMakeLists.txt  README.md
shader/: shader.fs
src/: MyApplication.cpp  imguiexample_opengl.cpp
