# Projects Settings
cmake_minimum_required (VERSION 3.1)
project (opengl-skeleton)

# The main executable
add_executable(main
  src/Application.cpp
  src/Application.cpp
  src/MyApplication.cpp
  src/MyApplication.cpp
  src/glError.hpp
  src/glError.cpp
  src/main.cpp
  src/Shader.hpp
  src/Shader.cpp
  lib/imgui/imconfig.h
  lib/imgui/imgui.cpp
  lib/imgui/imgui.h
  lib/imgui/imgui_demo.cpp
  lib/imgui/imgui_draw.cpp
  lib/imgui/imgui_internal.h
  lib/imgui/imgui_widgets.cpp
  lib/imgui/imstb_rectpack.h
  lib/imgui/imstb_textedit.h
  lib/imgui/imstb_truetype.h
)



set_property(TARGET main PROPERTY CXX_STANDARD 11)
target_compile_options(main PRIVATE -Wall)

# glfw
add_subdirectory(lib/glfw EXCLUDE_FROM_ALL)
target_link_libraries(main PRIVATE glfw)

# glew
add_definitions(-DGLEW_STATIC)
add_subdirectory(lib/glew EXCLUDE_FROM_ALL)
target_link_libraries(main PRIVATE libglew_static)

# glm
add_subdirectory(lib/glm EXCLUDE_FROM_ALL)
target_link_libraries(main PRIVATE glm)
